fixing odd font sizes on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -304,36 +304,33 @@ input[type="number"] {
     justify-content: center;
     width: 100%;
   }
-  
+
   .right-half {
     position: absolute;
     right: auto;
   }
-  
+
   #annotations-view {
     float: none;
     height: auto;
     width: 95vw;
   }
-  
+
   #annotations-view tei-p {
     width: 100%;
   }
-  
+
   #score-view {
     margin: 0;
     width: 90vw;
   }
-  
+
   #controls {
     margin-top: 0.5em;
-    font-size: 1.4em;
     transform: none;
   }
-    
+
   .controls-table {
-    width: 40vw;
-    font-size: 1.5em;
+    width: 80vw;
   }
 }
-
